<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/width"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/weight"
            android:background="@color/teamA_color"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top"
                android:fontFamily="@style/font_medium"
                android:gravity="center_horizontal"
                android:text="@string/string_name"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space"
                android:layout_marginTop="@dimen/top"
                android:fontFamily="@style/font_light"
                android:gravity="center"
                android:text="@string/number"
                android:textColor="@color/score_color"
                android:textSize="@dimen/score_text_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom"
                android:layout_marginLeft="@dimen/space"
                android:layout_marginRight="@dimen/space"
                android:onClick="addThreeForTeamA"
                android:text="@string/three_points" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom"
                android:layout_marginLeft="@dimen/space"
                android:layout_marginRight="@dimen/space"
                android:onClick="addTwoForTeamA"
                android:text="@string/two_points" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space"
                android:layout_marginRight="@dimen/space"
                android:onClick="addOneForTeamA"
                android:text="@string/one_point" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom"
                android:layout_marginLeft="@dimen/space"
                android:layout_marginRight="@dimen/space"
                android:layout_marginTop="@dimen/top"
                android:background="@color/foul_color"
                android:onClick="subtractOneForTeamA"
                android:text="@string/foul" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="@dimen/width"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/weight"
            android:background="#FF5252"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top"
                android:fontFamily="@style/font_medium"
                android:gravity="center_horizontal"
                android:text="@string/other_team_name"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space"
                android:layout_marginTop="@dimen/top"
                android:fontFamily="@style/font_light"
                android:gravity="center"
                android:text="@string/number"
                android:textColor="@color/score_color"
                android:textSize="@dimen/score_text_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom"
                android:layout_marginLeft="@dimen/space"
                android:layout_marginRight="@dimen/space"
                android:onClick="addThreeForTeamB"
                android:text="@string/three_points" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom"
                android:layout_marginLeft="@dimen/space"
                android:layout_marginRight="@dimen/space"
                android:onClick="addTwoForTeamB"
                android:text="@string/two_points" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space"
                android:layout_marginRight="@dimen/space"
                android:onClick="addOneForTeamB"
                android:text="@string/one_point" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom"
                android:layout_marginLeft="@dimen/space"
                android:layout_marginRight="@dimen/space"
                android:layout_marginTop="@dimen/top"
                android:background="@color/foul_color"
                android:onClick="subtractOneForTeamB"
                android:text="@string/foul" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:background="#b2ff59"
        android:onClick="resetScore"
        android:text="@string/reset" />

</RelativeLayout>